added ruby notation to output

--- a/views/translate.ejs
+++ b/views/translate.ejs
@@ -7,7 +7,7 @@
 <h1>Translated Text</h1>
 <div>
     <% translated.forEach(function (item) { %>
-        <h2><%= item.word %>, <%= item.tl %></h2>
+        <ruby><%= item.word %><rt><%= item.tl %></ruby>
     <% }) %>
 </div>
 
